--- a/icons.css
+++ b/icons.css
@@ -3,6 +3,8 @@ body{
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
+    max-width: 800px;
+    margin: auto;
 }
 .iconsrow {
     display: flex;
