--- a/icons.css
+++ b/icons.css
@@ -102,3 +102,31 @@ background-color: #261788;
 .dailymotion {
     background-color: #0066dc;
 }
+
+.snapchat {
+    background-color: #ffe400;
+}
+
+.vimeo {
+    background-color: #00b2ea;
+}
+
+.linkedin{
+    background-color: #007ebb;
+}
+
+.github{
+    background-color: #24292e;
+}
+
+.reddit{
+    background-color: #ff5700;
+}
+
+.whatsapp{
+    background-color: #67c15e ;
+}
+
+.tiktok{
+    background-color: black;
+}
