--- a/icons.css
+++ b/icons.css
@@ -16,9 +16,7 @@ img{
     width: 100%;
     max-height: 100%;
 }
-svg{
-    fill: white;
-}
+
 
 .icon{
     width: 64px;
@@ -64,7 +62,7 @@ background-color: #261788;
 }
 
 .facebook{
-    background-color: #4267B2;
+    background-color: #2e71ed;
 }
 
 .discord{
