--- a/icons.css
+++ b/icons.css
@@ -140,3 +140,19 @@ background-color: #261788;
 .info{
     background-color: grey;
 }
+
+.podmust{
+    background-color: #e6331f;
+}
+
+.telegram{
+    background-color: #2899e2;
+}
+
+.instagram{
+    background: #f09433; 
+background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+}
